# aleph-agent

./: .gitignore  AGENT_VM_PROVISIONING.md  CLAUDE.md  README.md  pyproject.toml
docs/: phase2-context.md
docs/plans/: aleph-cloud-agent-instructions.md
src/aleph_agent_mcp/: __init__.py  __main__.py  account.py  aleph_ops.py  config.py  cost.py  inventory.py  safety.py  server.py  types.py
tests/: conftest.py  test_aleph_ops.py  test_cost.py  test_inventory.py  test_safety.py  test_tools.py
tests/integration/: test_real_network.py
